<resources>
    <string name="app_name">Greek Package Tracker</string>
    <string name="camera_hint">Point the camera at a Barcode</string>
    <string name="camera_permission_denied">Camera permission is missing. \nGo to "App Info" to enable again.</string>
    <string name="notifications_permission_denied">Notifications permission is missing. \nGo to "Settings" to enable again.</string>
    <string name="notifications_permission_denied_info">Notifications permission is missing. \nGo to "App Info" to enable again.</string>
    <string name="toast_empty_tracking">Please enter a tracking number</string>
    <string name="new_tracking_hint">Tracking Number</string>
    <string name="new_name_hint">Package Name (optional)</string>
    <string name="toast_tracking_exists">This tracking number already exists!</string>
    <string name="sure_confirmation">Are you sure?</string>
    <string name="delete_confirmation">Do you want to delete this package?</string>
    <string name="delete_multiple_confirmation">Do you want to delete %1$d packages?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="package_deleted">Deleted package %1$s</string>
    <string name="packages_deleted">Deleted %1$d packages</string>
    <string name="package_completed">Marked package %1$s as completed</string>
    <string name="packages_completed">Marked %1$d packages as completed</string>
    <string name="package_active">Marked package %1$s as active</string>
    <string name="packages_active">Marked %1$d packages as active</string>
    <string name="added_successfully">Added successfully!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="edited_successfully">Edited successfully!</string>
    <string name="edit_package">Edit package</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="notif_pref">Notifications</string>
    <string name="notif_pref_summary">Receive notifications about new updates in your packages</string>
    <string name="notif_interval_pref">Notifications interval</string>
    <string name="notif_interval_pref_summary">15 minutes</string>
    <string name="restart">Restart</string>
    <string name="changes_restart_toast">Changes will apply after app restart</string>
    <string name="channelPkg_notification_description">This notification channel displays information about new package updates</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="less_than_a_minute_ago">Less than a minute ago</string>
    <string name="never">Never</string>
    <string name="status_none">Status: None</string>
    <string name="new_package">New package</string>
    <string name="scan">Scan</string>
    <string name="package_channel">Package Channel</string>
    <string name="language_pref">Language</string>
    <string name="language_pref_summary">Change app\'s display language</string>
    <string name="general_pref_cat">General</string>
    <string name="notif_pref_cat">Notifications</string>
    <string name="ask_add_package">Add Package?</string>
    <string name="possible_tracking_id">Possible tracking ID detected:\u0020</string>
    <string name="backup_restore_cat">Backup &amp; Restore</string>
    <string name="backup_pref">Backup</string>
    <string name="restore_pref">Restore</string>
    <string name="backup_pref_summary">Backup your packages</string>
    <string name="restore_pref_summary">Restore your packages</string>
    <string name="backup_exported_to">Backup exported to:\n\n</string>
    <string name="backup_error">There was an error while taking backup!</string>
    <string name="no_backup_found">No backup found!</string>
    <string name="backup_restored">Backup restored!</string>
    <string name="restore_error">There was an error while restoring backup!</string>
    <string name="backup_confirmation_msg">This action will overwrite any previous backups.</string>
    <string name="restore_confirmation_msg">Current packages won\'t be overwritten, only new ones will be added.</string>
    <string name="one_item_selected">1 item selected</string>
    <string name="multiple_items_selected">%1$d items selected</string>
    <string name="action_failed_invalid_tracking">This action could not be performed due to invalid tracking number</string>
    <string name="no_packages">No packages</string>
    <string name="no_packages_instructions">Add a new package using \"+\"</string>
    <string name="no_status_information">No status information available yet</string>
    <string name="select_all">Select all</string>
    <string name="status_to_clipboard">Status copied to clipboard</string>
    <string name="clipboard_pref_summary">Detect tracking number from clipboard and offer to add it</string>
    <string name="clipboard_pref">Clipboard detection</string>
    <string name="auto_detect_cat">Auto-Detect Packages</string>
    <string name="theme_pref_summary">Change app\'s theme</string>
    <string name="theme_pref">Theme</string>
    <string name="no_internet">There is no active internet connection</string>
    <string name="choose_barcode">Choose a barcode to add</string>
    <string name="tracking_copied_clipboard">Tracking number was copied to your clipboard</string>
    <string name="no_information_changed">No information changed</string>
    <string name="elta">Elta</string>
    <string name="speedex">Speedex</string>
    <string name="acs">ACS Courier</string>
    <string name="cometHellas">Comet Hellas</string>
    <string name="geniki">Geniki Taxydromiki</string>
    <string name="courierCenter">Courier Center</string>
    <string name="delatolas">Delatolas</string>
    <string name="skroutzLastMile">Skroutz Last Mile</string>
    <string name="boxNow">BoxNow</string>
    <string name="easyMail">Easy Mail</string>
    <string name="unknown_carrier">Unknown carrier</string>
    <string name="unknown">Unknown</string>
    <string name="copy_tracking_number">Copy Tracking Number</string>
    <string name="completed">Completed</string>
    <string name="mark_read">MARK READ</string>
    <string name="marked_as_read">Update marked as read!</string>
    <string name="mark_active">Mark as active</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="marked_as_completed">Package marked as completed!</string>
    <string name="mark_completed">COMPLETED</string>
    <string name="carrier">Carrier</string>
    <string name="tracking_number">Tracking number</string>
    <string name="updated_at">Updated at</string>
    <string name="last_update">Last update</string>
    <string name="status">Status</string>
    <string name="place">Place</string>
    <string name="timestamp">Timestamp</string>
    <string name="days_since">Days since</string>
    <string name="not_found">Error: Package not found!</string>
    <string name="boxNow_delivered">Delivered</string>
    <string name="boxNow_in_transit">Being delivered</string>
    <string name="boxNow_in_depot">Being delivered</string>
    <string name="boxNow_accepted_to_locker">Being delivered</string>
    <string name="boxNow_wait_for_load">Being delivered</string>
    <string name="boxNow_final_destination">Your Parcel is located at the locker</string>
    <string name="boxNow_in_final_destination">Your Parcel is located at the locker</string>
    <string name="boxNow_new">To be delivered by E-shop to BOX NOW</string>
    <string name="boxNow_returned">Parcel has been returned</string>
    <string name="boxNow_expired">Expired</string>
    <string name="boxNow_expired_return">Delivery has expired</string>
    <string name="boxNow_missing">To be found</string>
    <string name="boxNow_canceled">Cancelled</string>
    <string name="boxNow_cancelled">Cancelled</string>
    <string name="boxNow_cancelled_return">Cancelled</string>
    <string name="boxNow_lost">To be found</string>
    <string name="boxNow_depot">BoxNow Depot</string>
    <string name="boxNow_hub">BoxNow Depot</string>

    <string-array name="notif_interval_pref_entries">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="notif_interval_pref_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
    </string-array>
    <string-array name="language_pref_entries">
        <item>System\'s language</item>
        <item>English</item>
        <item>Greek</item>
    </string-array>
    <string-array name="language_pref_values" translatable="false">
        <item>sys</item>
        <item>en</item>
        <item>el</item>
    </string-array>
    <string-array name="theme_pref_entries">
        <item>System\'s theme</item>
        <item>Light theme</item>
        <item>Dark theme</item>
    </string-array>
    <string-array name="theme_pref_values" translatable="false">
        <item>sys</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
</resources>