<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/main_group">
        <item
            android:id="@+id/refresh_button"
            android:icon="@drawable/ic_refresh"
            android:title="@string/refresh"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/completed_button"
            android:icon="@drawable/ic_settings"
            android:title="@string/completed"
            app:showAsAction="collapseActionView" />

        <item
            android:id="@+id/settings_button"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="collapseActionView" />
    </group>

    <group android:id="@+id/selection_group">
        <item
            android:id="@+id/select_all"
            android:icon="@drawable/ic_select_all"
            android:title="@string/select_all"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/selection_complete_button"
            android:icon="@drawable/ic_check"
            android:title="@string/mark_as_completed"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/selection_active_button"
            android:icon="@drawable/ic_back"
            android:title="@string/mark_active"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/selection_delete_button"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete"
            app:showAsAction="ifRoom" />
    </group>
</menu>