<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:key="pref_notif"
        android:title="@string/notif_pref"
        android:summary="@string/notif_pref_summary"
        android:defaultValue="true"
        app:iconSpaceReserved="false"/>

    <ListPreference
        android:dependency="pref_notif"
        android:key="pref_notif_interval"
        android:title="@string/notif_interval_pref"
        android:entries="@array/notif_interval_pref_entries"
        android:entryValues="@array/notif_interval_pref_values"
        android:summary="@string/notif_interval_pref_summary"
        android:defaultValue="15"
        app:iconSpaceReserved="false"/>

</PreferenceScreen>