<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/refresh"
        android:id="@+id/refresh_button"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh"/>

    <item android:title="@string/edit"
        android:id="@+id/edit_button"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_edit"/>

    <item android:title="@string/delete"
        android:id="@+id/delete_button"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_delete"/>

    <item android:title="@string/open_in_browser"
        android:id="@+id/open_browser_button"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_open_in_browser"/>
</menu>